Add dry and wet fields
